# react-native-nitro-tflite

./: .npmignore  CHANGELOG.md  NitroTflite.podspec  README.md  nitro.json  package-lock.json  package.json
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: cpp-adapter.cpp
android/src/main/java/com/margelo/nitro/nitrotflite/: NitroTfliteInitProvider.kt  NitroTfliteOnLoad.kt  NitroTflitePackage.kt  TfliteUrlFetcher.java
cpp/: HybridTfliteModel.cpp  HybridTfliteModel.hpp  HybridTfliteModelFactory.cpp  HybridTfliteModelFactory.hpp  TfliteModelHostObject.hpp
ios/: NitroTfliteInstaller.mm
src/: index.ts
src/specs/: TfliteTypes.ts
